Adjust the width to prevent the button from being cut off

--- a/client/express-checkout/blocks/express-checkout-element.scss
+++ b/client/express-checkout/blocks/express-checkout-element.scss
@@ -14,3 +14,9 @@
 	margin: 24px 0 !important;
 	height: 20px;
 }
+
+.wc-block-components-express-payment
+	.wc-block-components-express-payment__event-buttons
+	> li {
+	width: 99% !important;
+}
